// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`migratePivotFolder returns a valid ActiveUI5 /ui folder 1`] = `
Object {
  "children": Object {
    "calculated_measures": Object {
      "children": Object {
        "content": Object {
          "children": Object {
            "000": Object {
              "entry": Object {
                "content": "{\\"expression\\":\\"IIf(IsEmpty(([Booking].[Desk].CurrentMember.Parent, [Measures].[pnl.SUM])), null, [Measures].[pnl.SUM] / ([Booking].[Desk].CurrentMember.Parent, [Measures].[pnl.SUM]))\\",\\"properties\\":[\\"FORMAT_STRING=\\\\\\"#,###.##%\\\\\\"\\"]}",
                "isDirectory": false,
              },
            },
            "001": Object {
              "entry": Object {
                "content": "{\\"expression\\":\\"IIf(IsEmpty(([Currency].[Currency].[ALL].[AllMember], [Measures].[pnl.FOREX])), null, [Measures].[pnl.FOREX] / ([Currency].[Currency].[ALL].[AllMember], [Measures].[pnl.FOREX]))\\",\\"properties\\":[\\"FORMAT_STRING=\\\\\\"#,###.##%\\\\\\"\\"]}",
                "isDirectory": false,
              },
            },
            "002": Object {
              "entry": Object {
                "content": "{\\"expression\\":\\"Count(Descendants([CounterParty].[CounterParty].CurrentMember, [CounterParty].[CounterParty].[CounterPartyGroup]), EXCLUDEEMPTY)\\",\\"properties\\":[\\"FORMAT_STRING=\\\\\\"#,###.##\\\\\\"\\"]}",
                "isDirectory": false,
              },
            },
          },
          "entry": Object {
            "isDirectory": true,
            "owners": Array [
              "ROLE_USER",
            ],
            "readers": Array [
              "ROLE_USER",
            ],
          },
        },
        "structure": Object {
          "children": Object {
            "000": Object {
              "children": Object {
                "000_metadata": Object {
                  "entry": Object {
                    "content": "{\\"name\\":\\"[Measures].[third calculated measure]\\"}",
                    "isDirectory": false,
                  },
                },
              },
              "entry": Object {
                "isDirectory": true,
              },
            },
            "001": Object {
              "children": Object {
                "001_metadata": Object {
                  "entry": Object {
                    "content": "{\\"name\\":\\"[Measures].[second calculated measure]\\"}",
                    "isDirectory": false,
                  },
                },
              },
              "entry": Object {
                "isDirectory": true,
              },
            },
            "002": Object {
              "children": Object {
                "002_metadata": Object {
                  "entry": Object {
                    "content": "{\\"name\\":\\"[Measures].[first calculated measure]\\"}",
                    "isDirectory": false,
                  },
                },
              },
              "entry": Object {
                "isDirectory": true,
              },
            },
          },
          "entry": Object {
            "isDirectory": true,
            "owners": Array [
              "ROLE_USER",
            ],
            "readers": Array [
              "ROLE_USER",
            ],
          },
        },
      },
      "entry": Object {
        "isDirectory": true,
        "owners": Array [
          "ROLE_CS_ROOT",
        ],
        "readers": Array [
          "ROLE_CS_ROOT",
        ],
      },
    },
    "dashboards": Object {
      "children": Object {
        "content": Object {
          "children": Object {
            "158": Object {
              "entry": Object {
                "canRead": true,
                "canWrite": true,
                "content": "{\\"pages\\":{\\"p-0\\":{\\"layout\\":{\\"children\\":[{\\"leafKey\\":\\"2\\"},{\\"leafKey\\":\\"1\\"}],\\"direction\\":\\"row\\"},\\"name\\":\\"Page 1\\",\\"filters\\":[],\\"content\\":{\\"1\\":{\\"query\\":{\\"mdx\\":\\"SELECT NON EMPTY Crossjoin(Hierarchize(DrilldownLevel([Geography].[City].[ALL].[AllMember])), Hierarchize(DrilldownLevel([Currency].[Currency].[ALL].[AllMember]))) ON ROWS, NON EMPTY [Measures].[contributors.COUNT] ON COLUMNS FROM [EquityDerivativesCube] CELL PROPERTIES VALUE, FORMATTED_VALUE, BACK_COLOR, FORE_COLOR, FONT_FLAGS\\",\\"updateMode\\":\\"once\\"},\\"filters\\":[],\\"queryContext\\":[{\\"key\\":\\"mdx.hiddengrandtotals\\",\\"value\\":\\"1\\"}],\\"mapping\\":{\\"rows\\":[\\"[Geography].[City].[City]\\",\\"[Currency].[Currency].[Currency]\\"],\\"columns\\":[\\"ALL_MEASURES\\"],\\"measures\\":[\\"[Measures].[contributors.COUNT]\\"]},\\"name\\":\\"Untitled Pivot Table\\",\\"serverKey\\":\\"my-server\\",\\"widgetKey\\":\\"tree-table\\",\\"columnWidths\\":{}},\\"2\\":{\\"switchedTo\\":\\"plotly-clustered-column-chart\\",\\"mapping\\":{\\"xAxis\\":[\\"[Currency].[Currency].[Currency]\\"],\\"values\\":[\\"[Measures].[pnl.FOREX]\\"],\\"secondaryValues\\":[],\\"splitBy\\":[\\"[Booking].[Desk].[LegalEntity]\\",\\"ALL_MEASURES\\"],\\"horizontalSubplots\\":[],\\"verticalSubplots\\":[]},\\"query\\":{\\"mdx\\":\\"SELECT NON EMPTY Crossjoin(Hierarchize(DrilldownLevel([Currency].[Currency])), Hierarchize(DrilldownLevel([Booking].[Desk].[ALL].[AllMember]))) ON ROWS, NON EMPTY [Measures].[pnl.FOREX] ON COLUMNS FROM [EquityDerivativesCube]\\",\\"updateMode\\":\\"once\\"},\\"filters\\":[],\\"queryContext\\":[],\\"serverKey\\":\\"my-server\\",\\"name\\":\\"Untitled Chart\\",\\"widgetKey\\":\\"plotly-line-chart\\"}},\\"queryContext\\":[]}},\\"pagesOrder\\":[\\"p-0\\"],\\"filters\\":[],\\"queryContext\\":[]}",
                "isDirectory": false,
                "lastEditor": "admin",
                "owners": Array [
                  "admin",
                ],
                "readers": Array [
                  "admin",
                ],
                "timestamp": 1607879735685,
              },
            },
          },
          "entry": Object {
            "isDirectory": true,
            "owners": Array [
              "ROLE_USER",
            ],
            "readers": Array [
              "ROLE_USER",
            ],
          },
        },
        "structure": Object {
          "children": Object {
            "158": Object {
              "children": Object {
                "158_metadata": Object {
                  "entry": Object {
                    "canRead": true,
                    "canWrite": true,
                    "content": "{\\"name\\":\\"hidden grand totals\\"}",
                    "isDirectory": true,
                    "lastEditor": "admin",
                    "owners": Array [
                      "admin",
                    ],
                    "readers": Array [
                      "admin",
                    ],
                    "timestamp": 1607879735685,
                  },
                },
              },
              "entry": Object {
                "canRead": true,
                "canWrite": true,
                "isDirectory": true,
                "lastEditor": "admin",
                "owners": Array [
                  "admin",
                ],
                "readers": Array [
                  "admin",
                ],
                "timestamp": 1607879735685,
              },
            },
          },
          "entry": Object {
            "isDirectory": true,
            "owners": Array [
              "ROLE_USER",
            ],
            "readers": Array [
              "ROLE_USER",
            ],
          },
        },
        "thumbnails": Object {
          "children": Object {},
          "entry": Object {
            "isDirectory": true,
            "owners": Array [
              "ROLE_USER",
            ],
            "readers": Array [
              "ROLE_USER",
            ],
          },
        },
      },
      "entry": Object {
        "isDirectory": true,
        "owners": Array [
          "ROLE_CS_ROOT",
        ],
        "readers": Array [
          "ROLE_CS_ROOT",
        ],
      },
    },
    "filters": Object {
      "children": Object {
        "content": Object {
          "children": Object {},
          "entry": Object {
            "isDirectory": true,
            "owners": Array [
              "ROLE_USER",
            ],
            "readers": Array [
              "ROLE_USER",
            ],
          },
        },
        "structure": Object {
          "children": Object {},
          "entry": Object {
            "isDirectory": true,
            "owners": Array [
              "ROLE_USER",
            ],
            "readers": Array [
              "ROLE_USER",
            ],
          },
        },
      },
      "entry": Object {
        "isDirectory": true,
        "owners": Array [
          "ROLE_CS_ROOT",
        ],
        "readers": Array [
          "ROLE_CS_ROOT",
        ],
      },
    },
    "organization_permissions": Object {
      "entry": Object {
        "content": "{}",
        "isDirectory": false,
        "owners": Array [
          "ROLE_CS_ROOT",
        ],
        "readers": Array [
          "ROLE_CS_ROOT",
        ],
      },
    },
    "organization_settings": Object {
      "entry": Object {
        "content": "{}",
        "owners": Array [
          "ROLE_CS_ROOT",
        ],
        "readers": Array [
          "ROLE_USER",
        ],
      },
    },
    "user_roles": Object {
      "entry": Object {
        "isDirectory": true,
        "owners": Array [
          "ROLE_CS_ROOT",
        ],
        "readers": Array [
          "ROLE_USER",
        ],
      },
    },
    "users": Object {
      "children": Object {
        "admin": Object {
          "children": Object {
            "activity": Object {
              "entry": Object {
                "content": "{\\"userFilters\\":[\\"[Geography].[City].[ALL].[AllMember].[Berlin]\\"]}",
                "owners": Array [
                  "admin",
                ],
                "readers": Array [
                  "admin",
                ],
              },
            },
            "settings": Object {
              "entry": Object {
                "content": "{\\"theme\\":\\"dark-activeviam\\",\\"search.maxResults\\":10,\\"userFilters.areEnabled\\":true}",
                "owners": Array [
                  "admin",
                ],
                "readers": Array [
                  "admin",
                ],
              },
            },
          },
          "entry": Object {
            "canRead": true,
            "canWrite": true,
            "isDirectory": true,
            "lastEditor": "admin",
            "owners": Array [
              "admin",
            ],
            "readers": Array [
              "admin",
            ],
            "timestamp": 1607879735685,
          },
        },
        "user1": Object {
          "children": Object {
            "activity": Object {
              "entry": Object {
                "content": "{}",
                "owners": Array [
                  "user1",
                ],
                "readers": Array [
                  "user1",
                ],
              },
            },
            "settings": Object {
              "entry": Object {
                "content": "{}",
                "owners": Array [
                  "user1",
                ],
                "readers": Array [
                  "user1",
                ],
              },
            },
          },
          "entry": Object {
            "canRead": true,
            "canWrite": true,
            "isDirectory": true,
            "lastEditor": "admin",
            "owners": Array [
              "user1",
            ],
            "readers": Array [
              "user1",
            ],
            "timestamp": 1607879735685,
          },
        },
      },
      "entry": Object {
        "isDirectory": true,
        "owners": Array [
          "ROLE_USER",
        ],
        "readers": Array [
          "ROLE_USER",
        ],
      },
    },
    "widgets": Object {
      "children": Object {
        "content": Object {
          "children": Object {},
          "entry": Object {
            "isDirectory": true,
            "owners": Array [
              "ROLE_USER",
            ],
            "readers": Array [
              "ROLE_USER",
            ],
          },
        },
        "structure": Object {
          "children": Object {},
          "entry": Object {
            "isDirectory": true,
            "owners": Array [
              "ROLE_USER",
            ],
            "readers": Array [
              "ROLE_USER",
            ],
          },
        },
      },
      "entry": Object {
        "isDirectory": true,
        "owners": Array [
          "ROLE_CS_ROOT",
        ],
        "readers": Array [
          "ROLE_CS_ROOT",
        ],
      },
    },
  },
  "entry": Object {
    "isDirectory": true,
    "owners": Array [
      "ROLE_CS_ROOT",
    ],
    "readers": Array [
      "ROLE_CS_ROOT",
    ],
  },
}
`;

exports[`migratePivotFolder returns a valid ActiveUI5 /ui folder on an input that does not contain an entry for calculated measures 1`] = `
Object {
  "children": Object {
    "calculated_measures": Object {
      "children": Object {
        "content": Object {
          "children": Object {
            "003": Object {
              "entry": Object {
                "content": "{\\"expression\\":\\"IIf(IsEmpty(([Booking].[Desk].CurrentMember.Parent, [Measures].[pnl.SUM])), null, [Measures].[pnl.SUM] / ([Booking].[Desk].CurrentMember.Parent, [Measures].[pnl.SUM]))\\",\\"properties\\":[\\"FORMAT_STRING=\\\\\\"#,###.##%\\\\\\"\\"]}",
                "isDirectory": false,
              },
            },
            "004": Object {
              "entry": Object {
                "content": "{\\"expression\\":\\"IIf(IsEmpty(([Currency].[Currency].[ALL].[AllMember], [Measures].[pnl.FOREX])), null, [Measures].[pnl.FOREX] / ([Currency].[Currency].[ALL].[AllMember], [Measures].[pnl.FOREX]))\\",\\"properties\\":[\\"FORMAT_STRING=\\\\\\"#,###.##%\\\\\\"\\"]}",
                "isDirectory": false,
              },
            },
            "005": Object {
              "entry": Object {
                "content": "{\\"expression\\":\\"Count(Descendants([CounterParty].[CounterParty].CurrentMember, [CounterParty].[CounterParty].[CounterPartyGroup]), EXCLUDEEMPTY)\\",\\"properties\\":[\\"FORMAT_STRING=\\\\\\"#,###.##\\\\\\"\\"]}",
                "isDirectory": false,
              },
            },
          },
          "entry": Object {
            "isDirectory": true,
            "owners": Array [
              "ROLE_USER",
            ],
            "readers": Array [
              "ROLE_USER",
            ],
          },
        },
        "structure": Object {
          "children": Object {
            "003": Object {
              "children": Object {
                "003_metadata": Object {
                  "entry": Object {
                    "content": "{\\"name\\":\\"[Measures].[third calculated measure]\\"}",
                    "isDirectory": false,
                  },
                },
              },
              "entry": Object {
                "isDirectory": true,
              },
            },
            "004": Object {
              "children": Object {
                "004_metadata": Object {
                  "entry": Object {
                    "content": "{\\"name\\":\\"[Measures].[second calculated measure]\\"}",
                    "isDirectory": false,
                  },
                },
              },
              "entry": Object {
                "isDirectory": true,
              },
            },
            "005": Object {
              "children": Object {
                "005_metadata": Object {
                  "entry": Object {
                    "content": "{\\"name\\":\\"[Measures].[first calculated measure]\\"}",
                    "isDirectory": false,
                  },
                },
              },
              "entry": Object {
                "isDirectory": true,
              },
            },
          },
          "entry": Object {
            "isDirectory": true,
            "owners": Array [
              "ROLE_USER",
            ],
            "readers": Array [
              "ROLE_USER",
            ],
          },
        },
      },
      "entry": Object {
        "isDirectory": true,
        "owners": Array [
          "ROLE_USER",
        ],
        "readers": Array [
          "ROLE_USER",
        ],
      },
    },
    "dashboards": Object {
      "children": Object {
        "content": Object {
          "children": Object {
            "bef": Object {
              "entry": Object {
                "canRead": true,
                "canWrite": true,
                "content": "{\\"pages\\":{\\"p-0\\":{\\"layout\\":{\\"children\\":[{\\"leafKey\\":\\"0\\",\\"size\\":1}],\\"direction\\":\\"row\\"},\\"name\\":\\"Page 1\\",\\"filters\\":[],\\"content\\":{\\"0\\":{\\"query\\":{\\"mdx\\":\\"SELECT FROM [EquityDerivativesCube] CELL PROPERTIES VALUE, FORMATTED_VALUE, BACK_COLOR, FORE_COLOR, FONT_FLAGS\\",\\"updateMode\\":\\"once\\"},\\"filters\\":[],\\"queryContext\\":[],\\"mapping\\":{\\"rows\\":[],\\"columns\\":[\\"ALL_MEASURES\\"],\\"measures\\":[]},\\"name\\":\\"Pivot table with calculated measures\\",\\"serverKey\\":\\"my-server\\",\\"widgetKey\\":\\"tree-table\\",\\"columnWidths\\":{}}},\\"queryContext\\":[]}},\\"pagesOrder\\":[\\"p-0\\"],\\"filters\\":[],\\"queryContext\\":[]}",
                "isDirectory": false,
                "lastEditor": "admin",
                "owners": Array [
                  "admin",
                ],
                "readers": Array [
                  "admin",
                ],
                "timestamp": 1658155953186,
              },
            },
          },
          "entry": Object {
            "isDirectory": true,
            "owners": Array [
              "ROLE_USER",
            ],
            "readers": Array [
              "ROLE_USER",
            ],
          },
        },
        "structure": Object {
          "children": Object {
            "bef": Object {
              "children": Object {
                "bef_metadata": Object {
                  "entry": Object {
                    "canRead": true,
                    "canWrite": true,
                    "content": "{\\"name\\":\\"Calculated measures dashboard.\\"}",
                    "isDirectory": true,
                    "lastEditor": "admin",
                    "owners": Array [
                      "admin",
                    ],
                    "readers": Array [
                      "admin",
                    ],
                    "timestamp": 1658155953644,
                  },
                },
              },
              "entry": Object {
                "canRead": true,
                "canWrite": true,
                "isDirectory": true,
                "lastEditor": "admin",
                "owners": Array [
                  "admin",
                ],
                "readers": Array [
                  "admin",
                ],
                "timestamp": 1658155953644,
              },
            },
          },
          "entry": Object {
            "isDirectory": true,
            "owners": Array [
              "ROLE_USER",
            ],
            "readers": Array [
              "ROLE_USER",
            ],
          },
        },
        "thumbnails": Object {
          "children": Object {},
          "entry": Object {
            "isDirectory": true,
            "owners": Array [
              "ROLE_USER",
            ],
            "readers": Array [
              "ROLE_USER",
            ],
          },
        },
      },
      "entry": Object {
        "isDirectory": true,
        "owners": Array [
          "ROLE_CS_ROOT",
        ],
        "readers": Array [
          "ROLE_CS_ROOT",
        ],
      },
    },
    "filters": Object {
      "children": Object {
        "content": Object {
          "children": Object {},
          "entry": Object {
            "isDirectory": true,
            "owners": Array [
              "ROLE_USER",
            ],
            "readers": Array [
              "ROLE_USER",
            ],
          },
        },
        "structure": Object {
          "children": Object {},
          "entry": Object {
            "isDirectory": true,
            "owners": Array [
              "ROLE_USER",
            ],
            "readers": Array [
              "ROLE_USER",
            ],
          },
        },
      },
      "entry": Object {
        "isDirectory": true,
        "owners": Array [
          "ROLE_CS_ROOT",
        ],
        "readers": Array [
          "ROLE_CS_ROOT",
        ],
      },
    },
    "organization_permissions": Object {
      "entry": Object {
        "content": "{}",
        "isDirectory": false,
        "owners": Array [
          "ROLE_CS_ROOT",
        ],
        "readers": Array [
          "ROLE_CS_ROOT",
        ],
      },
    },
    "organization_settings": Object {
      "entry": Object {
        "content": "{}",
        "owners": Array [
          "ROLE_CS_ROOT",
        ],
        "readers": Array [
          "ROLE_USER",
        ],
      },
    },
    "user_roles": Object {
      "entry": Object {
        "isDirectory": true,
        "owners": Array [
          "ROLE_CS_ROOT",
        ],
        "readers": Array [
          "ROLE_USER",
        ],
      },
    },
    "users": Object {
      "children": Object {
        "admin": Object {
          "children": Object {
            "activity": Object {
              "entry": Object {
                "content": "{}",
                "owners": Array [
                  "admin",
                ],
                "readers": Array [
                  "admin",
                ],
              },
            },
            "settings": Object {
              "entry": Object {
                "content": "{}",
                "owners": Array [
                  "admin",
                ],
                "readers": Array [
                  "admin",
                ],
              },
            },
          },
          "entry": Object {
            "canRead": true,
            "canWrite": true,
            "isDirectory": true,
            "lastEditor": "admin",
            "owners": Array [
              "admin",
            ],
            "readers": Array [
              "admin",
            ],
            "timestamp": 1658155953761,
          },
        },
      },
      "entry": Object {
        "isDirectory": true,
        "owners": Array [
          "ROLE_USER",
        ],
        "readers": Array [
          "ROLE_USER",
        ],
      },
    },
    "widgets": Object {
      "children": Object {
        "content": Object {
          "children": Object {},
          "entry": Object {
            "isDirectory": true,
            "owners": Array [
              "ROLE_USER",
            ],
            "readers": Array [
              "ROLE_USER",
            ],
          },
        },
        "structure": Object {
          "children": Object {},
          "entry": Object {
            "isDirectory": true,
            "owners": Array [
              "ROLE_USER",
            ],
            "readers": Array [
              "ROLE_USER",
            ],
          },
        },
      },
      "entry": Object {
        "isDirectory": true,
        "owners": Array [
          "ROLE_CS_ROOT",
        ],
        "readers": Array [
          "ROLE_CS_ROOT",
        ],
      },
    },
  },
  "entry": Object {
    "isDirectory": true,
    "owners": Array [
      "ROLE_CS_ROOT",
    ],
    "readers": Array [
      "ROLE_CS_ROOT",
    ],
  },
}
`;
